# echo

./: .gitignore  .prettierrc  .taurignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: chat.rs  lib.rs
src-tauri/src/model/: chatgpt.rs  claude.rs  gemini.rs  mod.rs
src/api/: chatActions.tsx  chatApi.tsx
src/components/: ChatDisplay.tsx  ChatInput.tsx  ChatInputOptions.tsx  ChatInterface.tsx  ChatList.tsx  CodeBlock.tsx  Modal.tsx  SettingsInterface.tsx  Sidebar.tsx
src/stores/: useChatStore.tsx  useSettingsStore.tsx
