[package]
name = "echo"
version = "0.1.0"
description = "A cross-platform desktop chat client that connects to LLM APIs"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }


[profile.dev]
# Optimize for faster compilation during development
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 1     # Apply a small amount of optimization for dependencies
debug = false     # Disable debug info for dependencies (you rarely debug third-party code)

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization (can increase compile time)
lto = true        # Enables link-time-optimizations (can increase compile time)
opt-level = "s"   # Prioritizes small binary size. Use "3" for maximum performance.
panic = "abort"   # Disables panic unwinding for smaller binary size
strip = true      # Ensures debug symbols are removed
